--- a/config/crd/bases/stroom.gchq.github.io_databasebackups.yaml
+++ b/config/crd/bases/stroom.gchq.github.io_databasebackups.yaml
@@ -1,10 +1,9 @@
-
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.1
+    controller-gen.kubebuilder.io/version: v0.9.2
   creationTimestamp: null
   name: databasebackups.stroom.gchq.github.io
 spec:
@@ -226,6 +225,7 @@ spec:
                               TODO: Add other useful fields. apiVersion, kind, uid?'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       user:
                         description: 'user is optional: User is the rados user name,
                           default is admin More info: https://examples.k8s.io/volumes/cephfs/README.md#how-to-use-it'
@@ -257,6 +257,7 @@ spec:
                               TODO: Add other useful fields. apiVersion, kind, uid?'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       volumeID:
                         description: 'volumeID used to identify the volume in cinder.
                           More info: https://examples.k8s.io/mysql-cinder-pd/README.md'
@@ -328,6 +329,7 @@ spec:
                           keys must be defined
                         type: boolean
                     type: object
+                    x-kubernetes-map-type: atomic
                   csi:
                     description: csi (Container Storage Interface) represents ephemeral
                       storage that is handled by certain external CSI drivers (Beta
@@ -357,6 +359,7 @@ spec:
                               TODO: Add other useful fields. apiVersion, kind, uid?'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       readOnly:
                         description: readOnly specifies a read-only configuration
                           for the volume. Defaults to false (read/write).
@@ -408,6 +411,7 @@ spec:
                               required:
                               - fieldPath
                               type: object
+                              x-kubernetes-map-type: atomic
                             mode:
                               description: 'Optional: mode bits used to set permissions
                                 on this file, must be an octal value between 0000
@@ -450,6 +454,7 @@ spec:
                               required:
                               - resource
                               type: object
+                              x-kubernetes-map-type: atomic
                           required:
                           - path
                           type: object
@@ -485,18 +490,18 @@ spec:
                       the pod that defines it - it will be created before the pod
                       starts, and deleted when the pod is removed. \n Use this if:
                       a) the volume is only needed while the pod runs, b) features
-                      of normal volumes like restoring from snapshot or capacity    tracking
+                      of normal volumes like restoring from snapshot or capacity tracking
                       are needed, c) the storage driver is specified through a storage
                       class, and d) the storage driver supports dynamic volume provisioning
-                      through    a PersistentVolumeClaim (see EphemeralVolumeSource
-                      for more    information on the connection between this volume
-                      type    and PersistentVolumeClaim). \n Use PersistentVolumeClaim
-                      or one of the vendor-specific APIs for volumes that persist
-                      for longer than the lifecycle of an individual pod. \n Use CSI
-                      for light-weight local ephemeral volumes if the CSI driver is
-                      meant to be used that way - see the documentation of the driver
-                      for more information. \n A pod can use both types of ephemeral
-                      volumes and persistent volumes at the same time."
+                      through a PersistentVolumeClaim (see EphemeralVolumeSource for
+                      more information on the connection between this volume type
+                      and PersistentVolumeClaim). \n Use PersistentVolumeClaim or
+                      one of the vendor-specific APIs for volumes that persist for
+                      longer than the lifecycle of an individual pod. \n Use CSI for
+                      light-weight local ephemeral volumes if the CSI driver is meant
+                      to be used that way - see the documentation of the driver for
+                      more information. \n A pod can use both types of ephemeral volumes
+                      and persistent volumes at the same time."
                     properties:
                       volumeClaimTemplate:
                         description: "Will be used to create a stand-alone PVC to
@@ -565,6 +570,7 @@ spec:
                                 - kind
                                 - name
                                 type: object
+                                x-kubernetes-map-type: atomic
                               dataSourceRef:
                                 description: 'dataSourceRef specifies the object from
                                   which to populate the volume with data, if a non-empty
@@ -582,13 +588,13 @@ spec:
                                   them is empty and the other is non-empty. There
                                   are two important differences between DataSource
                                   and DataSourceRef: * While DataSource only allows
-                                  two specific types of objects, DataSourceRef   allows
+                                  two specific types of objects, DataSourceRef allows
                                   any non-core object, as well as PersistentVolumeClaim
                                   objects. * While DataSource ignores disallowed values
-                                  (dropping them), DataSourceRef   preserves all values,
-                                  and generates an error if a disallowed value is   specified.
-                                  (Beta) Using this field requires the AnyVolumeDataSource
-                                  feature gate to be enabled.'
+                                  (dropping them), DataSourceRef preserves all values,
+                                  and generates an error if a disallowed value is
+                                  specified. (Beta) Using this field requires the
+                                  AnyVolumeDataSource feature gate to be enabled.'
                                 properties:
                                   apiGroup:
                                     description: APIGroup is the group for the resource
@@ -609,6 +615,7 @@ spec:
                                 - kind
                                 - name
                                 type: object
+                                x-kubernetes-map-type: atomic
                               resources:
                                 description: 'resources represents the minimum resources
                                   the volume should have. If RecoverVolumeExpansionFailure
@@ -690,6 +697,7 @@ spec:
                                       The requirements are ANDed.
                                     type: object
                                 type: object
+                                x-kubernetes-map-type: atomic
                               storageClassName:
                                 description: 'storageClassName is the name of the
                                   StorageClass required by the claim. More info: https://kubernetes.io/docs/concepts/storage/persistent-volumes#class-1'
@@ -777,6 +785,7 @@ spec:
                               TODO: Add other useful fields. apiVersion, kind, uid?'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                     required:
                     - driver
                     type: object
@@ -954,6 +963,7 @@ spec:
                               TODO: Add other useful fields. apiVersion, kind, uid?'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       targetPortal:
                         description: targetPortal is iSCSI Target Portal. The Portal
                           is either an IP or ip_addr:port if the port is other than
@@ -1119,6 +1129,7 @@ spec:
                                     or its keys must be defined
                                   type: boolean
                               type: object
+                              x-kubernetes-map-type: atomic
                             downwardAPI:
                               description: downwardAPI information about the downwardAPI
                                 data to project
@@ -1148,6 +1159,7 @@ spec:
                                         required:
                                         - fieldPath
                                         type: object
+                                        x-kubernetes-map-type: atomic
                                       mode:
                                         description: 'Optional: mode bits used to
                                           set permissions on this file, must be an
@@ -1193,6 +1205,7 @@ spec:
                                         required:
                                         - resource
                                         type: object
+                                        x-kubernetes-map-type: atomic
                                     required:
                                     - path
                                     type: object
@@ -1257,6 +1270,7 @@ spec:
                                     Secret or its key must be defined
                                   type: boolean
                               type: object
+                              x-kubernetes-map-type: atomic
                             serviceAccountToken:
                               description: serviceAccountToken is information about
                                 the serviceAccountToken data to project
@@ -1369,6 +1383,7 @@ spec:
                               TODO: Add other useful fields. apiVersion, kind, uid?'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       user:
                         description: 'user is the rados user name. Default is admin.
                           More info: https://examples.k8s.io/volumes/rbd/README.md#how-to-use-it'
@@ -1408,6 +1423,7 @@ spec:
                               TODO: Add other useful fields. apiVersion, kind, uid?'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       sslEnabled:
                         description: sslEnabled Flag enable/disable SSL communication
                           with Gateway, default false
@@ -1523,6 +1539,7 @@ spec:
                               TODO: Add other useful fields. apiVersion, kind, uid?'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       volumeName:
                         description: volumeName is the human-readable name of the
                           StorageOS volume.  Volume names are only unique within a
@@ -1579,9 +1596,3 @@ spec:
     storage: true
     subresources:
       status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
